[package]
name = "cssrem-lsp"
version = "0.1.0"
edition = "2021"
description = "Tiny language server that offers px <-> rem conversion completions for CSS/SCSS/Sass."

[[bin]]
name = "cssrem-lsp"
path = "src/main.rs"

[dependencies]
serde_json = "1"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
